# Insta_Data_aggregator

./: .gitignore  README.md
backend/: .env  .env.example  pyproject.toml  refresh_session.py  response_1.json  response_3.json  scratch_dump_scripts.py  scratch_parse_ssr.py  scratch_poc_playwright.py  scratch_tag_13.json  scratch_test_aditya.py  scratch_test_analyze.py  scratch_test_ssr_json.py  scratch_verify_analyze.py  scratch_verify_instaloader.py  scratch_verify_playwright_service.py  scratch_verify_side_by_side.py  script_tag_13.json  script_tag_16.json  script_tag_18.json  script_tag_24.json  script_tag_26.json  script_tag_36.json  script_tag_38.json  script_tag_41.json  test_analytics.py  test_instagram.py  test_main.py  test_mongodb.py  test_nlp.py  virat_payload.json  web_profile_info_latest.json  web_profile_info_output.json
backend/app/: analytics.py  config.py  db.py  exceptions.py  main.py  models.py  nlp.py
backend/app/services/: instagram.py
backend/sessions/playwright_instagram_profile/: Local State
backend/sessions/playwright_instagram_profile/Default/: DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
backend/sessions/playwright_instagram_profile/Default/DawnGraphiteCache/: data_1  index
backend/sessions/playwright_instagram_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  index
backend/sessions/playwright_instagram_profile/ShaderCache/: data_1  index
backend/sessions/playwright_instagram_profile/segmentation_platform/: ukm_db
frontend/: .gitignore
(+212 files in other folders)
