[project]
name = "praja-backend"
version = "0.1.0"
description = "Backend for Praja Creator Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pymongo",
    "instagrapi",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "langdetect",
    "python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
